from core import (
    CrudInterface,
    JsonManager,
    JsonManagerError,
    LogMixin,
    ValidationMixin,
    ConsoleUtils,
    confirm_action,
)
from core.colors import Fore
from models import Employee


class EmployeeController(CrudInterface, ValidationMixin, LogMixin):
    DATA_FILE = "data/Employee.json"

    def __init__(self):
        self.__storage = JsonManager(EmployeeController.DATA_FILE)

    def all(self):
        try:
            return self.__storage.load()
        except JsonManagerError as e:
            ConsoleUtils.print_error(str(e))
            return []

    def read(self):
        ConsoleUtils.print_header("=== EMPLEADOS ===")
        if not self.all():
            ConsoleUtils.print_error("No hay empleados registrados")
            return
        for employee_data in self.all():
            employee = Employee.from_dict(employee_data)
            ConsoleUtils.print_colored(employee.display_name, Fore.CYAN)

    def read_by_cedula(self, identification):
        try:
            employee = self.__storage.load()
        except JsonManagerError as e:
            ConsoleUtils.print_error(str(e))
            return None
        return next((e for e in employee if e["cedula"] == identification), None)

    def create(self):
        self.log_trace("Entrando a create()")

        name = self.validate_name(input("Ingrese nombre: "))
        identification = self.validate_identification(input("Ingrese cédula: "))
        salary = self.validate_salary(input("Ingrese sueldo: "))

        try:
            employee_data = self.__storage.load()
        except JsonManagerError as e:
            ConsoleUtils.print_error(str(e))
            return

        # Validar unicidad de cédula
        if any(e["cedula"] == identification for e in employee_data):
            raise ValueError("Ya existe un empleado con esa cédula")

        return self._save_employee(name, identification, salary)

    @confirm_action("¿Guardar empleado? (s/n): ")
    def _save_employee(self, name, identification, salary):
        employee = Employee(name, identification, salary)
        id_new = self.__storage.append(employee.to_dict())
        self.log_success(f"Empleado creado con ID: {id_new}")
        return id_new

    def update(self):
        self.log_trace("Entrando a update()")

        identification = input("Ingrese cedula del empleado a actualizar: ")
        employee_data = self.read_by_cedula(identification)

        if not employee_data:
            self.log_error("Empleado no encontrado.")
            return

        id_employee = employee_data["id"]

        employee = Employee(
            employee_data["nombre"], employee_data["cedula"], employee_data["sueldo"]
        )

        options = {
            "1": (
                "Nombre",
                lambda: employee.name,
                lambda v: setattr(employee, "name", v),
                self.validate_name,
            ),
            "2": (
                "Cédula",
                lambda: employee.identification,
                lambda v: setattr(employee, "identification", v),
                self.validate_identification,
            ),
            "3": (
                "Sueldo",
                lambda: employee.salary,
                lambda v: setattr(employee, "salary", v),
                self.validate_salary,
            ),
        }

        while True:
            print("\n--- Datos actuales del empleado ---")
            for key, (label, getter, _, _) in options.items():
                print(f"{key}. {label}: {getter()}")
            print("4. Guardar cambios")
            print("5. Cancelar")

            option = input("Seleccione opción: ")

            if option in options:
                label, _, setter, validation = options[option]
                new_value = input(f"Ingrese nuevo {label}: ")
                setter(validation(new_value))
                self.log_info(f"{label} actualizado en memoria")
            elif option == "4":
                self._update_employee(id_employee, employee)
                break
            elif option == "5":
                self.log_warn("Actualización cancelada por el usuario.")
                break
            else:
                self.log_warn("Opción inválida.")

    @confirm_action("¿Actualizar empleado? (s/n): ")
    def _update_employee(self, id_employee, employee):
        try:
            data_employee = self.__storage.load()
        except JsonManagerError as e:
            ConsoleUtils.print_error(str(e))
            return
        for e in data_employee:
            if e["cedula"] == employee.identification and e["id"] != id_employee:
                self.log_error("Ya existe otro empleado con esa cédula.")
                return
        self.__storage.update(id_employee, employee.to_dict())
        self.log_success("Cambios guardados correctamente.")

    def delete(self):
        self.log_trace("Entrando a delete()")

        identification = input("Ingrese cedula del empleado a eliminar: ")
        employee_data = self.read_by_cedula(identification)

        if not employee_data:
            self.log_error("Empleado no encontrado.")
            return

        id_employee = employee_data["id"]

        empleado = Employee(
            employee_data["nombre"], employee_data["cedula"], employee_data["sueldo"]
        )

        data = {
            "Nombre": lambda: empleado.name,
            "Cédula": lambda: empleado.identification,
            "Sueldo": lambda: empleado.salary,
        }

        while True:
            print("\n--- Datos actuales del empleado ---")
            for label, getter in data.items():
                print(f"{label}: {getter()}")
            print("\n4. Eliminar")
            print("5. Cancelar")

            opcion = input("Seleccione opción: ")

            if opcion == "4":
                self._delete_employee(id_employee)
                break
            elif opcion == "5":
                self.log_warn("Eliminación cancelada por el usuario.")
                break
            else:
                self.log_warn("Opción inválida.")

    @confirm_action("¿Eliminar empleado? (s/n): ")
    def _delete_employee(self, id_employee):
        self.__storage.delete(id_employee)
        self.log_success("Empleado eliminado correctamente.")
